--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,9 @@
+=== 3.1.2 / 2011-08-09
+
+* 1 bug fix:
+
+  * Fixed check for Gem::Deprecate. No clue. But it works now.
+
 === 3.1.1 / 2011-07-21
 
 * 2 bug fixes:
