--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,15 @@
+=== 3.2.4 / 2014-01-22
+
+* 1 minor enhancement:
+
+  * Switched to minitest 5 for testing.
+
+* 3 bug fixes:
+
+  * Fixed installs running rdoc on newer versions of rubygems.
+  * Fixed warnings in ruby 2.0.
+  * Fixed dependency installer for newer rubygems. No longer installs doco.
+
 === 3.2.3 / 2012-02-03
 
 * 1 bug fix:
