--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,10 @@
+=== 3.5.0 / 2020-02-29
+
+* 2 minor enhancements:
+
+  * Added :name option for sandboxes, mapping to path=~/.gem/repos/:name.
+  * Hoe isolate now defaults to system:true for its sandbox.
+
 === 3.4.0 / 2019-12-17
 
 * 2 minor enhancements:
