fixed broken link

--- a/README.rdoc
+++ b/README.rdoc
@@ -80,7 +80,7 @@ looking at the <tt>ISOLATE_ENV</tt>, <tt>RACK_ENV</tt>, and
 
 === Library Development
 
-If you're using Hoe[http://blog.zenspider.com/hoe] to manage your
+If you're using Hoe[http://www.zenspider.com/projects/hoe.html] to manage your
 library, you can use Isolate's Hoe plugin to automatically install
 your lib's development, runtime, and test dependencies without
 polluting your system RubyGems, and run your tests/specs in total
